--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@types/react-dom": "^16.9.8",
     "axios": "^0.21.0",
     "fp-ts": "^2.8.5",
+    "history": "^5.0.0",
     "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-scripts": "4.0.0",
     "redux": "^4.0.5",
-    "typescript": "^4.0.3",
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.0.5",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
@@ -35,10 +37,11 @@
     "eslint-plugin-testing-library": "^3.10.0",
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "parcel index.html",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
