--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/lodash": "^4.14.163",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
+    "antd": "^4.8.0",
     "axios": "^0.21.0",
+    "formik": "^2.2.1",
     "fp-ts": "^2.8.5",
     "history": "^5.0.0",
     "lodash": "^4.17.20",
@@ -25,8 +22,19 @@
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/preset-react": "^7.12.1",
+    "@types/jest": "^26.0.15",
+    "@types/lodash": "^4.14.163",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.6.0",
     "@typescript-eslint/parser": "^4.6.0",
+    "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.12.1",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.2.0",
@@ -38,7 +46,8 @@
     "husky": "^4.3.0",
     "lint-staged": "^10.5.0",
     "parcel-bundler": "^1.12.4",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "parcel index.html",
