--- a/.eslintrc
+++ b/.eslintrc
@@ -26,7 +26,7 @@
     "react/jsx-no-undef": 2,
     "react/jsx-uses-vars": 2,
     "react/no-unknown-property": 2,
-    "react/jsx-boolean-value": [1, "always"],
+    // "react/jsx-boolean-value": [1, "always"],
     "react/jsx-uses-react": 1,
     "react/no-did-update-set-state": 1,
     "react/react-in-jsx-scope": 1,
